# ls -1 ./openssl/ | xargs -I % echo "  'openssl/%',"
openssl_headers = files(
  'openssl/aes.h',
  'openssl/asn1err.h',
  'openssl/asn1.h',
  'openssl/asn1_mac.h',
  'openssl/asn1t.h',
  'openssl/asyncerr.h',
  'openssl/async.h',
  'openssl/bioerr.h',
  'openssl/bio.h',
  'openssl/blowfish.h',
  'openssl/bnerr.h',
  'openssl/bn.h',
  'openssl/buffererr.h',
  'openssl/buffer.h',
  'openssl/camellia.h',
  'openssl/cast.h',
  'openssl/cmac.h',
  'openssl/cmserr.h',
  'openssl/cms.h',
  'openssl/comperr.h',
  'openssl/comp.h',
  'openssl/conf_api.h',
  'openssl/conferr.h',
  'openssl/conf.h',
  'openssl/cryptoerr.h',
  'openssl/crypto.h',
  'openssl/cterr.h',
  'openssl/ct.h',
  'openssl/__DECC_INCLUDE_EPILOGUE.H',
  'openssl/__DECC_INCLUDE_PROLOGUE.H',
  'openssl/des.h',
  'openssl/dherr.h',
  'openssl/dh.h',
  'openssl/dsaerr.h',
  'openssl/dsa.h',
  'openssl/dtls1.h',
  'openssl/ebcdic.h',
  'openssl/ecdh.h',
  'openssl/ecdsa.h',
  'openssl/ecerr.h',
  'openssl/ec.h',
  'openssl/engineerr.h',
  'openssl/engine.h',
  'openssl/e_os2.h',
  'openssl/err.h',
  'openssl/evperr.h',
  'openssl/evp.h',
  'openssl/hmac.h',
  'openssl/idea.h',
  'openssl/kdferr.h',
  'openssl/kdf.h',
  'openssl/lhash.h',
  'openssl/md2.h',
  'openssl/md4.h',
  'openssl/md5.h',
  'openssl/mdc2.h',
  'openssl/modes.h',
  'openssl/objectserr.h',
  'openssl/objects.h',
  'openssl/obj_mac.h',
  'openssl/ocsperr.h',
  'openssl/ocsp.h',
  'openssl/opensslconf.h.in',
  'openssl/opensslv.h',
  'openssl/ossl_typ.h',
  'openssl/pem2.h',
  'openssl/pemerr.h',
  'openssl/pem.h',
  'openssl/pkcs12err.h',
  'openssl/pkcs12.h',
  'openssl/pkcs7err.h',
  'openssl/pkcs7.h',
  'openssl/rand_drbg.h',
  'openssl/randerr.h',
  'openssl/rand.h',
  'openssl/rc2.h',
  'openssl/rc4.h',
  'openssl/rc5.h',
  'openssl/ripemd.h',
  'openssl/rsaerr.h',
  'openssl/rsa.h',
  'openssl/safestack.h',
  'openssl/seed.h',
  'openssl/sha.h',
  'openssl/srp.h',
  'openssl/srtp.h',
  'openssl/ssl2.h',
  'openssl/ssl3.h',
  'openssl/sslerr.h',
  'openssl/ssl.h',
  'openssl/stack.h',
  'openssl/storeerr.h',
  'openssl/store.h',
  'openssl/symhacks.h',
  'openssl/tls1.h',
  'openssl/tserr.h',
  'openssl/ts.h',
  'openssl/txt_db.h',
  'openssl/uierr.h',
  'openssl/ui.h',
  'openssl/whrlpool.h',
  'openssl/x509err.h',
  'openssl/x509.h',
  'openssl/x509v3err.h',
  'openssl/x509v3.h',
  'openssl/x509_vfy.h',
)
